maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: not found: value l
  for(x<-0 to l-1)
              ^JediEscaper:23: error: not found: value h
    for(y<-0 to h-1)
                ^JediEscaper:39: error: not found: value getMondehauteur
    for(y<-0 to getMondehauteur-1)
                ^